--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:id="@+id/main_recyclerView"
         android:scrollbars="none"
-        android:background="#F2F8FC">
+        android:background="@drawable/gradient_bg">
     </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
