--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RE"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:background="#ffffff">
 
     <ImageView
@@ -21,20 +23,33 @@
     <TextView
         android:id="@+id/item_list_text_textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="25dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
-        android:textColor="#000000"
-        android:textSize="18sp"
+        android:layout_marginTop="25dp"
+        android:textColor="#383838"
+        android:textSize="20sp"
+        android:text="운동"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/item_list_menu_imageView"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/item_list_text_textView2"
+        android:layout_width="70dp"
+        android:layout_height="20dp"
+        android:text="월요일" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/RE"
+        android:background="#7C7C7C" />
+
     <android.support.v7.widget.SwitchCompat
         android:id="@+id/item_list_switchCompat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0.1dp"
+        android:layout_height="0.1dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="15dp"
         android:layout_marginTop="8dp"
