--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#5467cf</color>
+
+    <color name="colorPrimary">#FFB8B8</color>
+    <color name="colorPrimaryDark">#7AF0FF</color>
+    <color name="colorAccent">#FFC748</color>
 </resources>
